--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
-tensorflow 
-pillow 
-humanfriendly 
-matplotlib 
-tqdm 
+cupy #may need to find a certain version of cupy/cupy-cuda version that works 
 jsonpickle 
-statistics 
+humanfriendly 
+matplotlib==3.5.1
+opencv-python==4.6.0.66
+pandas==1.3.5
+pillow==6.2.0 
+progressbar2==3.51.0
+pretrainedmodels==0.7.4
+tqdm 
+torch==1.2.0
+torchvision==0.4.0
+torchnet==0.0.4
+tensorflow 
 requests
+scikit-image==0.19.1
+statistics 
